# mpi-test-suite

./: .gitignore  LICENSE  Makefile.am  Makefile.in  README  README.md  acinclude.m4  aclocal.m4  cmdline.ggo  compile_info.h  config.guess  config.h.in  config.sub  configure  configure.ac  configure.in  mpi_test_suite.c  mpi_test_suite.h  tst_comm.c  tst_comm.h  tst_file.c  tst_output.c  tst_output.h  tst_tests.c  tst_threads.c  tst_threads.h  tst_types.c
.github/workflows/: pr-checks.yaml
coll/: tst_coll_allgather.c  tst_coll_allgather_in_place.c  tst_coll_allreduce.c  tst_coll_allreduce_in_place.c  tst_coll_allreduce_max.c  tst_coll_allreduce_min.c  tst_coll_allreduce_quadsum.c  tst_coll_allreduce_sum.c  tst_coll_alltoall.c  tst_coll_bcast.c  tst_coll_gather.c  tst_coll_reduce_in_place_max.c  tst_coll_reduce_in_place_min.c  tst_coll_reduce_max.c  tst_coll_reduce_min.c  tst_coll_scan_sum.c  tst_coll_scatter.c  tst_coll_scatterv.c  tst_coll_scatterv_stride.c
dynamic/: tst_comm_spawn.c  tst_comm_spawn_multiple.c  tst_establish_communication.c
env/: tst_env_cart_communicator.c  tst_env_get_version.c  tst_env_request_null.c  tst_env_status_check.c  tst_env_type_dup.c
io/: .directory  tst_file_append_mode.c  tst_file_asyncio_atomic.c  tst_file_io_atomic.c  tst_file_io_commself.c  tst_file_io_sync.c  tst_file_io_with_arrange.c  tst_file_io_with_hole.c  tst_file_io_with_hole2.c  tst_file_iread.c  tst_file_iread_at.c  tst_file_iread_shared.c  tst_file_iwrite.c  tst_file_iwrite_at.c  tst_file_iwrite_shared.c  tst_file_preallocate.c  tst_file_read.c  tst_file_read_all.c  tst_file_read_all_begin.c  tst_file_read_at.c  tst_file_read_at_all.c  tst_file_read_at_all_begin.c  tst_file_read_convert.c  tst_file_read_darray.c  tst_file_read_ordered.c  tst_file_read_ordered_begin.c  tst_file_read_shared.c  tst_file_read_subarray.c  tst_file_sequential_mode.c  tst_file_set_size.c  tst_file_simple.c  tst_file_write.c  tst_file_write_all.c  tst_file_write_all_begin.c  tst_file_write_at.c  tst_file_write_at_all.c  tst_file_write_at_all_begin.c  tst_file_write_darray.c  tst_file_write_ordered.c  tst_file_write_ordered_begin.c  (+2 more)
one-sided/: tst_accumulate_with_fence_sum.c  tst_accumulate_with_lock_max.c  tst_accumulate_with_post_min.c  tst_get_with_fence.c  tst_get_with_lock.c  tst_get_with_post.c  tst_one_sided_simple_ring_get.c  tst_one_sided_simple_ring_get_post.c  tst_one_sided_simple_ring_put.c  tst_put_with_fence.c  tst_put_with_lock.c  tst_put_with_post.c
p2p/: tst_p2p_alltoall.c  tst_p2p_alltoall_graph.c  tst_p2p_alltoall_irsend.c  tst_p2p_alltoall_issend.c  tst_p2p_alltoall_persistent.c  tst_p2p_alltoall_probe_anysource.c  tst_p2p_alltoall_sendrecv.c  tst_p2p_alltoall_xisend.c  tst_p2p_direct_partner_intercomm.c  tst_p2p_many_to_one.c  tst_p2p_many_to_one_iprobe_anysource.c  tst_p2p_many_to_one_isend_cancel.c  tst_p2p_many_to_one_probe_anysource.c  tst_p2p_simple_ring.c  tst_p2p_simple_ring_bottom.c  tst_p2p_simple_ring_bsend.c  tst_p2p_simple_ring_ibsend.c  tst_p2p_simple_ring_irsend.c  tst_p2p_simple_ring_isend.c  tst_p2p_simple_ring_issend.c  tst_p2p_simple_ring_pack.c  tst_p2p_simple_ring_persistent.c  tst_p2p_simple_ring_rsend.c  tst_p2p_simple_ring_sendrecv.c  tst_p2p_simple_ring_shift.c  tst_p2p_simple_ring_ssend.c  tst_p2p_simple_ring_xsend.c
threaded/: tst_threaded_bcast.c  tst_threaded_comm_dup.c  tst_threaded_ring.c  tst_threaded_ring_bsend.c  tst_threaded_ring_isend.c  tst_threaded_ring_partitioned.c  tst_threaded_ring_partitioned_many_to_one.c  tst_threaded_ring_persistent.c
